--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
-  "name": "prochainement",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "portfolio",
+  "private": true,
+  "version": "0.0.0",
+  "homepage": "http://www.clementbellier.fr/",
+  "type": "module",
   "scripts": {
-    "sass": "sass --watch ./stars.scss:./stars.css"
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "@react-hook/intersection-observer": "^3.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.1.0",
+    "gh-pages": "^4.0.0",
+    "vite": "^3.1.0"
+  }
 }
